# myalgo

./: .gitignore  .linux_bashrc  README.md
offer/: CMakeLists.txt  PV.cpp  README.md  build_offer.sh  wish.md
offer/book/: 0index.md  materials.md  paper.md
offer/book/basis/: index.md  数据库.md
offer/career/: 2023.md  adas.md  index.md  presentation.md  tech.md
offer/career/0 PI/: 2023PI02.md  Bosch(2020.4-2022.5).md  P104.md  PI03.md  jd-algorithm.md  jd-sw-arch.md  jd-system.md  jd.md  time.md
offer/career/email/: template.md
offer/career/resume/: jiang yi -BOSCH-En.doc  project.md  resume.md  姜 祎-Bosch-2023-lastest.doc  姜 祎-Bosch-Cn.doc  姜 祎-Bosch-Cn0619.doc  姜 祎-Bosch-Cn0620.doc
offer/cpp/: index.md
offer/interview/: 01数据结构与算法.md  02c++.md  04操作系统.md  05计算机网络.md  07网络编程.md  0index.md  10english.md
offer/notebooks/: 2021.md  2022-2.md  2022.md  Principles of Economics.md  household.md  housing.md  my.md  principle.md  resume.md  summary.md  system.md  商业.md
offer/os/: 0introduction.md  1memory.md  2process.md  index.md
offer/start up/: 0.md  1.md
offer/tools/: 0.md  docker.md  gdb.md  git.md  linux.md  markdown.md  nano editor.md  powerpoint.md  ros2.md  selena_cmake.md  ssh.md  virtualbox.md  visual studio.md  vscode.md  vscode_issue.md
offer/wisdom/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  30.md  31.md  32.md  33.md  34.md  35.md  36.md  37.md  38.md  zero to one.md  差距的形成.md
(+690 files in other folders)
